--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "A microservice to monitor the stock market, and reflect current market prices.",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server/bin/www.js",
-    "dev": "nodemon ./server/bin/www.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env DEBUG=log node ./server/bin/www.js",
+    "dev": "cross-env NODE_ENV=development DEBUG=log nodemon --exec babel-node ./server/bin/www.js",
+    "test": "cross-env NODE_ENV=test jest --verbose",
+    "test:debug": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
+    "test:watch": "cross-env NODE_ENV=test jest --watch --verbose",
+    "test:cover": "cross-env NODE_ENV=test jest --coverage",
+    "test:ci": "cross-env NODE_ENV=test jest --coverage --verbose && cat ./coverage/lcov.info | coveralls",
+    "lint": "eslint \"./**/*.js\"",
+    "lint:fix": "eslint --fix \"server/**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -20,12 +26,24 @@
   },
   "homepage": "https://github.com/microapidev/stockTicker-api#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "^2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
+    "@babel/node": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "coveralls": "^3.1.0",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.1.0",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
+    "supertest": "^4.0.2"
   }
 }
