--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch --verbose",
     "test:cover": "cross-env NODE_ENV=test jest --coverage",
     "test:ci": "cross-env NODE_ENV=test jest --coverage --verbose && cat ./coverage/lcov.info | coveralls",
-    "lint": "eslint \"src/**/*.js\"",
-    "lint:fix": "eslint --fix \"src/**/*.js\""
+    "lint": "eslint \"./**/*.js\"",
+    "lint:fix": "eslint --fix \"./**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "^2.6.9",
     "express": "~4.16.1",
+    "express-rate-limit": "^5.1.3",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
