--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "cookie-parser": "~1.4.4",
     "cross-env": "^7.0.2",
     "debug": "^2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.1.3",
+    "mongoose": "^5.9.25",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
