chore: npm script; .env.example bug

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-AUTH_API_MONGODB_URI = 'mongodb+srv://<username>:<password>@sandbox-1lm4h.mongodb.net/<db-name>?retryWrites=true&w=majority'
+DB_URI = 'mongodb+srv://<username>:<password>@sandbox-1lm4h.mongodb.net/<db-name>?retryWrites=true&w=majority'
 
 PORT = 3000
 
