--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:debug": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
     "test:watch": "cross-env NODE_ENV=test jest --watch --verbose",
     "test:cover": "cross-env NODE_ENV=test jest --coverage",
-    "test:ci": "cross-env NODE_ENV=test jest --coverage --verbose && cat ./coverage/lcov.info | coveralls",
+    "test:ci": "cross-env NODE_ENV=test jest -- --coverage --verbose && cat ./coverage/lcov.info | coveralls",
     "lint": "eslint \"./**/*.js\"",
     "lint:fix": "eslint --fix \"./**/*.js\""
   },
