--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.1.3",
     "mongoose": "^5.9.25",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
