--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env DEBUG=log node ./src/bin/www.js",
-    "dev": "cross-env NODE_ENV=development DEBUG=log nodemon --exec babel-node ./src/bin/www.js",
+    "dev": "cross-env NODE_ENV=dev DEBUG=log nodemon --exec babel-node ./src/bin/www.js",
     "test": "cross-env NODE_ENV=test jest --verbose",
     "test:debug": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
     "test:watch": "cross-env NODE_ENV=test jest --watch --verbose",
@@ -33,6 +33,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
+    "express-jwt": "^6.0.0",
     "express-rate-limit": "^5.1.3",
     "mongoose": "^5.9.25",
     "morgan": "~1.9.1"
