--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ DB_URI = 'mongodb+srv://<username>:<password>@sandbox-1lm4h.mongodb.net/<db-name
 PORT = 3000
 
 HOST='http://localhost:3000'
+
+ADMIN_SECRET='adminSecret'
