--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-jwt": "^6.0.0",
     "express-rate-limit": "^5.1.3",
     "mongoose": "^5.9.25",
+    "mongoose-delete": "^0.5.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
