--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "express-rate-limit": "^5.1.3",
     "mongoose": "^5.9.25",
     "mongoose-delete": "^0.5.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
