--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A microservice to monitor the stock market, and reflect current market prices.",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env DEBUG=log node ./src/bin/www.js",
+    "start": "cross-env DEBUG=log NODE_ENV=production node ./src/bin/www.js",
     "dev": "cross-env NODE_ENV=dev DEBUG=log nodemon --exec babel-node ./src/bin/www.js",
     "test": "cross-env NODE_ENV=test jest --verbose",
     "test:debug": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
@@ -37,7 +37,9 @@
     "express-rate-limit": "^5.1.3",
     "mongoose": "^5.9.25",
     "mongoose-delete": "^0.5.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
