fix: add logs to test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env DEBUG=log NODE_ENV=production node ./src/bin/www.js",
     "dev": "cross-env NODE_ENV=dev DEBUG=log nodemon --exec babel-node ./src/bin/www.js",
-    "test": "cross-env NODE_ENV=test jest --verbose",
+    "test": "cross-env DEBUG=log NODE_ENV=test jest --verbose",
     "test:debug": "cross-env NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
     "test:watch": "cross-env NODE_ENV=test jest --watch --verbose",
     "test:cover": "cross-env NODE_ENV=test jest --coverage",
