--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "mongoose": "^5.9.25",
     "mongoose-delete": "^0.5.2",
     "morgan": "~1.9.1",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
